--- a/my-gigs.html
+++ b/my-gigs.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="My Gigs"/>
 <meta property="og:description" content="My presence in different freelance sites and gigs i pitched."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="CodeWeeD0.github.io/my-gigs.html"/>
+<meta property="og:url" content="/my-gigs.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-05-29 10:20:00+05:30"/>
 <meta property="article:modified_time" content="2017-05-29 10:20:00+05:30"/>
-<meta property="article:author" content="CodeWeeD0.github.io/author/shubham-biswas.html">
+<meta property="article:author" content="/author/shubham-biswas.html">
 <meta property="article:section" content="My gigs"/>
 <meta property="og:image" content="">
 
@@ -42,10 +42,10 @@
 <body>
   <aside>
     <div>
-      <a href="CodeWeeD0.github.io">
-        <img src="CodeWeeD0.github.io/theme/img/profile.jpeg" alt="" title="">
+      <a href="">
+        <img src="/theme/img/profile.jpeg" alt="" title="">
       </a>
-      <h1><a href="CodeWeeD0.github.io"></a></h1>
+      <h1><a href=""></a></h1>
 
 
       <nav>
@@ -78,7 +78,7 @@
       
     <h1 id="my-gigs">My Gigs</h1>
     <p>
-          Posted on Mon 29 May 2017 in <a href="CodeWeeD0.github.io/category/my-gigs.html">My gigs</a>
+          Posted on Mon 29 May 2017 in <a href="/category/my-gigs.html">My gigs</a>
 
 
     </p>
@@ -125,7 +125,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " CodeWeeD ",
-  "url" : "CodeWeeD0.github.io",
+  "url" : "",
   "image": "",
   "description": ""
 }
