--- a/about-me.html
+++ b/about-me.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="CodeWeeD - Here we get high on code."/>
 <meta property="og:description" content="Something about this blog and me (Shubham Biswas)"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="CodeWeeD0.github.io/about-me.html"/>
+<meta property="og:url" content="/about-me.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-05-24 10:20:00+05:30"/>
 <meta property="article:modified_time" content="2017-05-24 10:20:00+05:30"/>
-<meta property="article:author" content="CodeWeeD0.github.io/author/shubham-biswas.html">
+<meta property="article:author" content="/author/shubham-biswas.html">
 <meta property="article:section" content="About Me"/>
 <meta property="og:image" content="">
 
@@ -42,10 +42,10 @@
 <body>
   <aside>
     <div>
-      <a href="CodeWeeD0.github.io">
-        <img src="CodeWeeD0.github.io/theme/img/profile.jpeg" alt="" title="">
+      <a href="">
+        <img src="/theme/img/profile.jpeg" alt="" title="">
       </a>
-      <h1><a href="CodeWeeD0.github.io"></a></h1>
+      <h1><a href=""></a></h1>
 
 
       <nav>
@@ -78,7 +78,7 @@
       
     <h1 id="about-me">CodeWeeD - Here we get high on code.</h1>
     <p>
-          Posted on Wed 24 May 2017 in <a href="CodeWeeD0.github.io/category/about-me.html">About Me</a>
+          Posted on Wed 24 May 2017 in <a href="/category/about-me.html">About Me</a>
 
 
     </p>
@@ -135,7 +135,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " CodeWeeD ",
-  "url" : "CodeWeeD0.github.io",
+  "url" : "",
   "image": "",
   "description": ""
 }
