--- a/archives.html
+++ b/archives.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -27,7 +27,7 @@
 <meta property="og:title" content="CodeWeeD"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="CodeWeeD0.github.io"/>
+<meta property="og:url" content=""/>
 
   <title>CodeWeeD &ndash;     Archives
 </title>
@@ -36,10 +36,10 @@
 <body>
   <aside>
     <div>
-      <a href="CodeWeeD0.github.io">
-        <img src="CodeWeeD0.github.io/theme/img/profile.jpeg" alt="" title="">
+      <a href="">
+        <img src="/theme/img/profile.jpeg" alt="" title="">
       </a>
-      <h1><a href="CodeWeeD0.github.io"></a></h1>
+      <h1><a href=""></a></h1>
 
 
       <nav>
@@ -75,11 +75,11 @@
   <div>
     <dl>
       <dt>Mon 29 May 2017</dt>
-      <dd><a href="CodeWeeD0.github.io/my-gigs.html">My Gigs</a></dd>
+      <dd><a href="/my-gigs.html">My Gigs</a></dd>
       <dt>Sun 28 May 2017</dt>
-      <dd><a href="CodeWeeD0.github.io/olympics-ipynb.html">Data Visualization of Olympics Data.</a></dd>
+      <dd><a href="/olympics-ipynb.html">Data Visualization of Olympics Data.</a></dd>
       <dt>Wed 24 May 2017</dt>
-      <dd><a href="CodeWeeD0.github.io/about-me.html">CodeWeeD - Here we get high on code.</a></dd>
+      <dd><a href="/about-me.html">CodeWeeD - Here we get high on code.</a></dd>
     </dl>
   </div>
 </article>
@@ -99,7 +99,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " CodeWeeD ",
-  "url" : "CodeWeeD0.github.io",
+  "url" : "",
   "image": "",
   "description": ""
 }
