--- a/categories.html
+++ b/categories.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -27,7 +27,7 @@
 <meta property="og:title" content="CodeWeeD"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="CodeWeeD0.github.io"/>
+<meta property="og:url" content=""/>
 
   <title>CodeWeeD &ndash;     Categories
 </title>
@@ -36,10 +36,10 @@
 <body>
   <aside>
     <div>
-      <a href="CodeWeeD0.github.io">
-        <img src="CodeWeeD0.github.io/theme/img/profile.jpeg" alt="" title="">
+      <a href="">
+        <img src="/theme/img/profile.jpeg" alt="" title="">
       </a>
-      <h1><a href="CodeWeeD0.github.io"></a></h1>
+      <h1><a href=""></a></h1>
 
 
       <nav>
@@ -74,9 +74,9 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="CodeWeeD0.github.io/category/about-me.html">About Me</a> (1)</li>
-      <li><a href="CodeWeeD0.github.io/category/my-gigs.html">My gigs</a> (1)</li>
-      <li><a href="CodeWeeD0.github.io/category/posts.html">Posts</a> (1)</li>
+      <li><a href="/category/about-me.html">About Me</a> (1)</li>
+      <li><a href="/category/my-gigs.html">My gigs</a> (1)</li>
+      <li><a href="/category/posts.html">Posts</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -96,7 +96,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " CodeWeeD ",
-  "url" : "CodeWeeD0.github.io",
+  "url" : "",
   "image": "",
   "description": ""
 }
