--- a/olympics-ipynb.html
+++ b/olympics-ipynb.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="CodeWeeD0.github.io/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -28,11 +28,11 @@
 <meta property="og:title" content="Data Visualization of Olympics Data."/>
 <meta property="og:description" content="Data Visualization of Olympics Data from Kaggle in a jupyter notebook.¶Here&#39;s the link to CSV file- [Kaggle link] (https://www.kaggle.com/jayrav13/olympic-track-field-results)"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="CodeWeeD0.github.io/olympics-ipynb.html"/>
+<meta property="og:url" content="/olympics-ipynb.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-05-28 17:25:00+05:30"/>
 <meta property="article:modified_time" content="2017-05-28 17:25:00+05:30"/>
-<meta property="article:author" content="CodeWeeD0.github.io/author/shubham-biswas.html">
+<meta property="article:author" content="/author/shubham-biswas.html">
 <meta property="article:section" content="Posts"/>
 <meta property="og:image" content="">
 
@@ -42,10 +42,10 @@
 <body>
   <aside>
     <div>
-      <a href="CodeWeeD0.github.io">
-        <img src="CodeWeeD0.github.io/theme/img/profile.jpeg" alt="" title="">
+      <a href="">
+        <img src="/theme/img/profile.jpeg" alt="" title="">
       </a>
-      <h1><a href="CodeWeeD0.github.io"></a></h1>
+      <h1><a href=""></a></h1>
 
 
       <nav>
@@ -78,7 +78,7 @@
       
     <h1 id="olympics-ipynb">Data Visualization of Olympics Data.</h1>
     <p>
-          Posted on Sun 28 May 2017 in <a href="CodeWeeD0.github.io/category/posts.html">Posts</a>
+          Posted on Sun 28 May 2017 in <a href="/category/posts.html">Posts</a>
 
 
     </p>
@@ -3937,7 +3937,7 @@ oHwRDQAAAABJRU5ErkJggg==
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " CodeWeeD ",
-  "url" : "CodeWeeD0.github.io",
+  "url" : "",
   "image": "",
   "description": ""
 }
