--- a/my-gigs.html
+++ b/my-gigs.html
@@ -88,7 +88,9 @@
   <div>
     <h1>My Profiles on Freelancing Sites:</h1>
 <ul>
-<li>https://www.upwork.com/freelancers/~0161a2f6860a20a650 - Upwork</li>
+<li><a href='https://www.upwork.com/freelancers/~0161a2f6860a20a650' target="_blank"> Upwork</a></li>
+<li><a href='https://app.coworks.com/shubham-biswas-41264' target="_blank"> Coworks</a></li>
+<li><a href='https://www.fiverr.com/zero_shubham' target="_blank"> Fiverr</a></li>
 </ul>
 <h3>Services i provide at present:</h3>
 <ol>
