--- a/about-me.html
+++ b/about-me.html
@@ -88,12 +88,7 @@
   <div>
     <h1>About Me</h1>
 <h6>Welcome to CodeWeeD - blog where i share my codes and projects on which i get high.</h6>
-<<<<<<< HEAD
 <p>So,hello there! I'm Shubham Biswas, I maintain this blog. No doubt I'm human and by obvious human nature a curious creature. I code cause i try to learn about different solutions of some interesting practical problems and innovate through my learnings, it's my true happiness in life. You have landed over to the "about me" page. All information herein is related to personal, academics, professional and contact information of mine.</p>
-=======
-<p>        </p>
-<p>So,hello there! I'm Shubham Biswas, I maintain this blog. No doubt I'm human and by obvious human nature a curious creature. I code cause i try to learn about different solutions of some interesting practical problems and innovate through my learnings, it's my true happiness in life. You have landed over to the "about me" page. All inofrmation herein is related to personal, academics, professional and contact information of mine.</p>
->>>>>>> b5e50665a8325331fcb443c9b86762df943e79e6
 <h5><em>A firm believer of the saying-</em></h5>
 <blockquote>
 <h4><em>Play To Play, Not To Win</em></h4>
@@ -108,11 +103,7 @@
 </ol>
 <h6>I'm into serious coding(learning frameworks and different programming languages) since 2015. And while i was discovering more about this game i got interest in <strong>Computer Vision, Bots, ML and IOT</strong>. At present i'm trying to learn about <strong>data science</strong> and related frameworks as it will help me in ML and CV.</h6>
 <h6>This blog will be my archive for my projects and hobbyist works. May be this will also help beginners to some extent, i'll try to keep things simple and interesting.</h6>
-<<<<<<< HEAD
-<p>Drop me a mail <em>codeweed0@gmail.com</em> for any kind of queries. And <strong>to provide instant feedback related to my posts, please comment on the posts of my G+ account(I'll share each post there)</strong>,<a href="https://goo.gl/0mcKxD" target="_blank">Google+</a>.</p>
-=======
-<p>Drop me a mail <em>codeweed0@gmail.com</em> for any kind of queries.</p>
->>>>>>> b5e50665a8325331fcb443c9b86762df943e79e6
+<p>Drop me a mail <em>codeweed0@gmail.com</em> for any kind of queries. And <strong>to provide instant feedback related to my posts, please comment on the posts of my G+ account(I'll share each post there)</strong>, link - https://goo.gl/0mcKxD.</p>
 <p>Keep playing!     <br>
 <em><strong>Signing off - zero(Shubham)</strong></em></p>
   </div>
@@ -134,7 +125,17 @@
 </p>    </footer>
   </main>
 
+<!-- Google Analytics -->
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-100111774-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
 
 
 
@@ -150,8 +151,4 @@
 </script>
 
 </body>
-<<<<<<< HEAD
 </html>
-=======
-</html>
->>>>>>> b5e50665a8325331fcb443c9b86762df943e79e6
