--- a/archives.html
+++ b/archives.html
@@ -74,11 +74,8 @@
   </header>
   <div>
     <dl>
-<<<<<<< HEAD
       <dt>Thu 08 June 2017</dt>
       <dd><a href="/multi-dimensional-data.html">Multi-dimensional data in Pandas with panels and multi-indexed dataframes.</a></dd>
-=======
->>>>>>> b5e50665a8325331fcb443c9b86762df943e79e6
       <dt>Mon 29 May 2017</dt>
       <dd><a href="/my-gigs.html">My Gigs</a></dd>
       <dt>Sun 28 May 2017</dt>
@@ -95,7 +92,17 @@
 </p>    </footer>
   </main>
 
+<!-- Google Analytics -->
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-100111774-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
 
 
 
