--- a/categories.html
+++ b/categories.html
@@ -76,11 +76,7 @@
     <ul class="list">
       <li><a href="/category/about-me.html">About Me</a> (1)</li>
       <li><a href="/category/my-gigs.html">My gigs</a> (1)</li>
-<<<<<<< HEAD
       <li><a href="/category/posts.html">Posts</a> (2)</li>
-=======
-      <li><a href="/category/posts.html">Posts</a> (1)</li>
->>>>>>> b5e50665a8325331fcb443c9b86762df943e79e6
     </ul>
   </div>
 </article>
@@ -91,7 +87,17 @@
 </p>    </footer>
   </main>
 
+<!-- Google Analytics -->
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-100111774-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
 
 
 
