--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,8 @@
   </header>
   <div>
     <dl>
+      <dt>Sat 10 June 2017</dt>
+      <dd><a href="/groupby-method.html">Understanding groupby() method in Pandas.</a></dd>
       <dt>Thu 08 June 2017</dt>
       <dd><a href="/multi-dimensional-data.html">Multi-dimensional data in Pandas with panels and multi-indexed dataframes.</a></dd>
       <dt>Mon 29 May 2017</dt>
