--- a/index.html
+++ b/index.html
@@ -70,6 +70,35 @@
 
 <article>
   <header>
+    <h2><a href="/groupby-method.html#groupby-method">Understanding groupby() method in Pandas.</a></h2>
+    <p>
+          Posted on Sat 10 June 2017 in <a href="/category/posts.html">Posts</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><strong>Official documentation to groupby() method-</strong> [<a href="https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.groupby.html">https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.groupby.html</a>]</p>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+      <br>
+      <a class="btn" href="/groupby-method.html#groupby-method">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="/multi-dimensional-data.html#multi-dimensional-data">Multi-dimensional data in Pandas with panels and multi-indexed dataframes.</a></h2>
     <p>
           Posted on Thu 08 June 2017 in <a href="/category/posts.html">Posts</a>
