--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,8 @@
   </header>
   <div>
     <dl>
+      <dt>Thu 15 June 2017</dt>
+      <dd><a href="/join-merge-concat.html">Merging joining and concatenating of dataframe in Pandas.</a></dd>
       <dt>Sat 10 June 2017</dt>
       <dd><a href="/groupby-method.html">Understanding groupby() method in Pandas.</a></dd>
       <dt>Thu 08 June 2017</dt>
