--- a/index.html
+++ b/index.html
@@ -70,6 +70,35 @@
 
 <article>
   <header>
+    <h2><a href="/join-merge-concat.html#join-merge-concat">Merging joining and concatenating of dataframe in Pandas.</a></h2>
+    <p>
+          Posted on Thu 15 June 2017 in <a href="/category/posts.html">Posts</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Link to data used - [<a href="https://drive.google.com/file/d/0B4AoXl65l-zxRU5NYjhlSVB2ZEU/view?usp=sharing">https://drive.google.com/file/d/0B4AoXl65l-zxRU5NYjhlSVB2ZEU/view?usp=sharing</a>]</p>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+      <br>
+      <a class="btn" href="/join-merge-concat.html#join-merge-concat">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="/groupby-method.html#groupby-method">Understanding groupby() method in Pandas.</a></h2>
     <p>
           Posted on Sat 10 June 2017 in <a href="/category/posts.html">Posts</a>
