--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,8 @@
   </header>
   <div>
     <dl>
+      <dt>Tue 14 November 2017</dt>
+      <dd><a href="/mpl_to_plotly.html">Converting Matplotlib plot to interactive plot with Plotly</a></dd>
       <dt>Thu 15 June 2017</dt>
       <dd><a href="/join-merge-concat.html">Merging joining and concatenating of dataframe in Pandas.</a></dd>
       <dt>Sat 10 June 2017</dt>
