--- a/index.html
+++ b/index.html
@@ -70,6 +70,28 @@
 
 <article>
   <header>
+    <h2><a href="/mpl_to_plotly.html#mpl_to_plotly">Converting Matplotlib plot to interactive plot with Plotly</a></h2>
+    <p>
+          Posted on Tue 14 November 2017 in <a href="/category/posts.html">Posts</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+      <br>
+      <a class="btn" href="/mpl_to_plotly.html#mpl_to_plotly">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+
+<article>
+
+  <header>
     <h2><a href="/join-merge-concat.html#join-merge-concat">Merging joining and concatenating of dataframe in Pandas.</a></h2>
     <p>
           Posted on Thu 15 June 2017 in <a href="/category/posts.html">Posts</a>
