--- a/about-me.html
+++ b/about-me.html
@@ -103,7 +103,7 @@
 </ol>
 <h6>I'm into serious coding(learning frameworks and different programming languages) since 2015. And while i was discovering more about this game i got interest in <strong>Computer Vision, Bots, ML and IOT</strong>. At present i'm trying to learn about <strong>data science</strong> and related frameworks as it will help me in ML and CV.</h6>
 <h6>This blog will be my archive for my projects and hobbyist works. May be this will also help beginners to some extent, i'll try to keep things simple and interesting.</h6>
-<p>Drop me a mail <em>codeweed0@gmail.com</em> for any kind of queries. And <strong>to provide instant feedback related to my posts, please comment on the posts of my G+ account(I'll share each post there)</strong>, link - <a href="https://goo.gl/0mcKxD." target="_blank">https://goo.gl/0mcKxD.</a></p>
+<p>Drop me a mail <em>codeweed0@gmail.com</em> for any kind of queries. And <strong>to provide instant feedback related to my posts, please comment on the posts of my G+ account(I'll share each post there)</strong>, link - https://goo.gl/0mcKxD.</p>
 <p>Keep playing!     <br>
 <em><strong>Signing off - zero(Shubham)</strong></em></p>
   </div>
