--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,8 @@
   </header>
   <div>
     <dl>
+      <dt>Thu 25 January 2018</dt>
+      <dd><a href="/applying-linear-regression.html">Ordinary Least Squares or Linear Regrssion</a></dd>
       <dt>Tue 14 November 2017</dt>
       <dd><a href="/mpl_to_plotly.html">Converting Matplotlib plot to interactive plot with Plotly</a></dd>
       <dt>Thu 15 June 2017</dt>
