logistic regression update

--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,8 @@
   </header>
   <div>
     <dl>
+      <dt>Wed 31 January 2018</dt>
+      <dd><a href="/applying-logistic-regression-classifier.html">Applying LogisticRegression classifier.</a></dd>
       <dt>Thu 25 January 2018</dt>
       <dd><a href="/applying-linear-regression.html">Ordinary Least Squares or Linear Regrssion</a></dd>
       <dt>Tue 14 November 2017</dt>
