--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
   </aside>
   <main>
 
+<article>
+  <header>
+    <h2><a href="/applying-logistic-regression-classifier.html#applying-logistic-regression-classifier">Applying LogisticRegression Classifier</a></h2>
+    <p>
+          Posted on Wed 31 January 2018 in <a href="/category/posts.html">Posts</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+      <br>
+      <a class="btn" href="/applying-logistic-regression-classifier.html#applying-logistic-regression-classifier">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+
 
 <article>
   <header>
@@ -78,6 +99,9 @@
   </header>
   <div>
       
+
+
+
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
